...
                              builder: (context) =>
                                  const VerificationRequestScreen(),
                            ),
                          ));
                        },
                        icon: const Icon(Icons.verified),
                        label: const Text('Otelinizi Doğrulayın'),
                        style: OutlinedButton.styleFrom(
                          padding: const EdgeInsets.symmetric(vertical: 16),
                        ),
                      ),
                      const SizedBox(height: 16),
                    ],
...
